[package]
name = "dadong-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.*", features = [
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "rt-multi-thread",
    "sync",
    "time",
] }

dotenv = "*"
lazy_static = "*"
futures = { version = "0.3.*" }
dadong-lib= { path = "../dadong-lib" }
